# hs2p

./: .gitignore  Dockerfile  Dockerfile.gpu  README.md  log_nproc.py  main.py  main_remote.py  patch_extraction.py  patch_sampling.py  pyproject.toml  release.py  requirements.in  requirements.txt  setup.cfg  setup.py  utils.py
.github/workflows/: bench-tile-store.yml  docker.yaml  pr-test.yaml  release.yaml
config/: __init__.py  default.yaml  panda.yaml  panda_4096.yaml  panda_radboud.yaml  tcga_brca.yaml  tcga_brca_clam.yaml  tcga_brca_dl.yaml
config/extraction/: default.yaml
config/sampling/: default.yaml
docs/: README.md  api.md  artifacts.md  benchmark.md  cli.md  documentation.md  test-revamp.md  tissue-mask-generation.md
hs2p/: __init__.py  __main__.py  api.py  artifacts.py  benchmarking.py  fileops.py  preprocessing.py  progress.py  sampling.py  sampling_support.py  segmentation.py  tile_qc.py  tiling.py  tiling_artifacts.py
hs2p/cli/: __init__.py  sampling.py  tiling.py
hs2p/configs/: __init__.py  _loader.py  default.yaml  models.py  resolvers.py
hs2p/tiling/: __init__.py  contours.py  coverage.py  generate.py  io.py  mask.py  orchestration.py  result.py  single.py  tar.py
hs2p/utils/: __init__.py  config.py  log_utils.py  misc.py  stderr.py  utils.py
hs2p/wsi/: __init__.py  api.py  backend.py  batched_reads.py  cucim_reader.py  geometry.py  masks.py  preview.py  read_plans.py  reader.py  region_tiles.py  segmentation.py  tile_stream.py  tiling.py  types.py  utils.py  visualization.py  wsi.py
hs2p/wsi/backends/: __init__.py  asap.py  common.py  cucim.py  openslide.py  vips.py
hs2p/wsi/streaming/: __init__.py  batched.py  plans.py  regions.py  stream.py
scripts/: __init__.py  benchmark_throughput.py  benchmark_tile_read.py  benchmark_tile_read_strategies.py  benchmark_tile_read_support.py  benchmark_tile_store.py  benchmark_tile_store_support.py  benchmark_tile_utils.py  benchmark_tiling_cli.py  generate_test_fixture_tiling_artifacts.py  generate_tissue_mask.py  regenerate_fixture_visualizations.py
source/: WholeSlideImage.py  batch_process_utils.py  util_classes.py  utils.py  wsi.py  wsi_utils.py
tasks/: 2026-03-18-clean-contract-simplification.md  2026-04-20-dead-code-cleanup-plan.md  adaptive-contour-thickness-plan.md  dead-code-cleanup-plan.md  fix-refactor-regressions-plan.md  generate-new-fixture-output-plan.md  improve-test-suite-plan.md  lessons.md  mask-path-cutover.md  performance-improvement-plan.md  readme-docs-refresh-plan.md  test-revamp-plan.md  throughput-phase2-implementation-plan.md
test/: conftest.py  test_sort_and_mask_utils.py
test-revamped/: conftest.py  test_mocked_multires_tiling.py
test-revamped/helpers/: fake_wsi_backend.py
test/fixtures/gt/: test-wsi.npy
test/fixtures/input/: config.yaml
test/gt/: test-wsi.npy
test/input/: config.yaml  test.csv
tests/: __init__.py  conftest.py  test_annotation_coverage.py  test_annotation_path_flattening.py  test_annotation_path_safety.py  test_backend_selection.py  test_benchmark_throughput.py  test_benchmark_tile_store.py  test_benchmarking.py  test_cli_smoke.py  test_config_loading.py  test_contour_processing_internal.py  test_filter_black_white_errors.py  test_fixture_artifacts_regression.py  test_generate_fixture_tiling_artifacts.py  test_generate_tissue_mask_coarse_roi_alignment.py  test_generate_tissue_mask_spacing.py  test_legacy_coordinates_regression.py  test_level_selection.py  test_mask_read_size_guard.py  test_mocked_multires_tiling.py  test_mocked_sampling_filter.py  test_overlay_semantics.py  test_preprocessing_core.py  test_preprocessing_mask_resolution.py  test_progress.py  test_read_level_no_padding.py  test_read_plans.py  test_real_fixture_smoke_regression.py  test_region_tiles.py  test_sampling_color_mapping_validation.py  test_sampling_process_slide.py  test_sampling_request_resolution.py  test_segment_tissue.py  test_segmentation_module.py  test_sort_and_mask_utils.py  test_spacing_read_primitives.py  test_standalone_mask_pyramid.py  test_stderr_utils.py  test_tile_count_heuristic_regression.py  (+14 more)
tests/fixtures/gt/: test-wsi.coordinates.meta.json  test-wsi.coordinates.npz  test-wsi.tiles.npz
tests/fixtures/input/: test-mask.tif
tests/helpers/: fake_wsi_backend.py  params.py
wsi/: WholeSlideImage.py  batch_process_utils.py  util_classes.py  wsi_utils.py
