[metadata]
name = hs2p
version = 0.0.0
description = Embedding of whole slide images with Foundation Models
author = Clément Grisi
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages =
    hs2p
install_requires =
    omegaconf
    numpy<2
    pandas
    h5py
    tqdm
    wandb
    pillow
    matplotlib
    opencv-python
    wholeslidedata

python_requires = >=3.10
zip_safe = no
include_package_data = True

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
hs2p = py.typed

[flake8]
max-line-length = 160
